--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,19 @@
 .custom-scrollbar::-webkit-scrollbar-track {
     background: transparent;
 }
+
+
+.card-scrollbar::-webkit-scrollbar {
+    width: 8px;
+    position: absolute;
+    right: 0
+}
+
+.card-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 6px;
+}
+
+.card-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+}
